meta-lead-ads-package/main/default/objects/Meta_Campaign_Analytics__c/Meta_Campaign_Analytics__c.object-meta.xml
<CustomObject>
    <label>Meta Campaign Analytics</label>
    <pluralLabel>Meta Campaign Analytics</pluralLabel>
    <nameField>
        <displayFormat>MCA-{000000}</displayFormat>
        <label>Campaign Analytics Record</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>