meta-lead-ads-package/main/default/objects/Meta_Campaign_Analytics__c/fields/Ad_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Account_Id__c</fullName>
    <label>Ad Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>