meta-lead-ads-package/main/default/objects/Meta_Campaign_Analytics__c/fields/CPL__c.field-meta.xml
<CustomField>
    <fullName>CPL__c</fullName>
    <label>CPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>