meta-lead-ads-package/main/default/objects/Meta_Campaign_Analytics__c/fields/CPM__c.field-meta.xml
<CustomField>
    <fullName>CPM__c</fullName>
    <label>CPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>